--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abdullah Edits | Video Editor Portfolio</title>
-
+<meta name="google-site-verification" content="4IO5MfF0q_U3P6TVM-EyJIJjASU7rj7C5X-RS6chrwM" />
     <meta name="description" content="Abdullah Fazal is a video editor specializing in YouTube, TikTok, Instagram reels, and cinematic edits. Explore his latest projects and tools.">
     <meta name="keywords" content="Abdullah Edits, Abdullah Fazal, Video Editor, YouTube Edits, TikTok Edits, Instagram Reels, Cinematic Edits, Premiere Pro, After Effects, DaVinci Resolve, Abdullah Portfolio, Abdullah Video Editing">
     <meta name="author" content="Abdullah Fazal">
@@ -395,3 +395,4 @@
         </footer>
 </body>
 </html>
+
